// This is the public API offered by your entity.
syntax = "proto3";

import "kalix/annotations.proto";
import "google/api/annotations.proto";
import "com/example/factorial_api.proto";
import "google/protobuf/empty.proto";

package com.example;

option java_outer_classname = "FactorialActionApi";

message CalculateFactorialRequest {
  int32 number = 1;
}

message MessageResponse {
  string message = 1;
}

service FactorialController {
  option (kalix.codegen) = {
    action: {}
  };

  // rpc CalculateFactorial(CalculateFactorialRequest) returns (FactorialResponse){}
  //We can add some input as an example
  rpc CallSyncEndpoint(google.protobuf.Empty) returns (MessageResponse){}

  rpc CallAsyncEndpoint(google.protobuf.Empty) returns (MessageResponse){}
}